<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AAUno</string>
    <string name="action_settings">Settings</string>
    <string name="startGameMP">Start Game</string>
    <string name="findPlayersMP">Find Players</string>
    <string name="optionsMP">Options</string>
    <string name="helpMP">Help</string>
    <string name="quitMP">Quit</string>
    <string name="showPlayersMP">Show Online Players</string>
    <string name="userMgmt">User Management</string>
    <string name="musicOnOff">Music On/Off</string>
    <string name="soundeffectsOnOffMP">Soundeffects On/Off</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">E-Mail</string>
    <string name="saveUser">Save</string>
    <string name="createUser">Create User</string>
    <string name="createBtnStr">Create</string>
    <string name="changePwd">Change Password</string>
    <string name="changePwdBtnStr">Change</string>
    <string name="oldPwd">Old Password</string>
    <string name="newPwd">New Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="PleaseLogin">Please login</string>
    <string name="remember">Remember?</string>
    <string name="createGame">Create Game</string>
    <string name="joinGame">Join Game</string>
    <string name="start">Start</string>
    <string name="waitingForPlayers">Waiting for Players ...</string>
    <string-array name="maxPlayersSelection">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="joinGameHeadline">Select a Game</string>
    <string name="openGame">Open Game</string>
    <string name="gameLobbyStartAutomatically">The game will start automatically when the last player joins. Only the admin can start the game manually. (maybe: You can also start the game manually by clicking on \"Play\")</string>
    <string name="gameLobby">Game Lobby</string>
    <string name="joinedPlayersListView">Joined Players</string>
    <string name="sendChatMsg">Send</string>
    <string name="sendChatMsgHint">Send a Message</string>
    <string name="max_users">Max. Users</string>

</resources>
