<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:id="@+id/container">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_menu"
        android:id="@+id/menu"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/menu_opaque">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingTop="35dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/startGameMP"
                    android:id="@+id/startGameMP"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/white"
                    android:shadowColor="@color/menuefont_shadow"
                    android:shadowRadius="20"
                    android:shadowDx="10"
                    android:shadowDy="-10"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/optionsMP"
                    android:id="@+id/optionsMP"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/white"
                    android:shadowColor="@color/menuefont_shadow"
                    android:shadowRadius="20"
                    android:shadowDx="10"
                    android:shadowDy="-10"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/helpMP"
                    android:id="@+id/helpMP"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/white"
                    android:shadowColor="@color/menuefont_shadow"
                    android:shadowRadius="20"
                    android:shadowDx="10"
                    android:shadowDy="-10"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quitMP"
                    android:id="@+id/quitMP"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/white"
                    android:shadowColor="@color/menuefont_shadow"
                    android:shadowRadius="20"
                    android:shadowDx="10"
                    android:shadowDy="-10"/>
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>
</FrameLayout>
