<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menu"
    android:id="@+id/menu"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/menu_opaque">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingTop="35dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/createUserHeadline"
                android:text="@string/createUser"
                android:layout_gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:textColor="@color/white"
                android:shadowColor="@color/menuefont_shadow"
                android:shadowRadius="20"
                android:shadowDx="10"
                android:shadowDy="-10"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:id="@+id/createUserUsernameStr"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/white"
                    android:shadowColor="@color/menuefont_shadow"
                    android:shadowRadius="20"
                    android:shadowDx="10"
                    android:shadowDy="-10"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtBoxUsername"
                    android:layout_gravity="right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:id="@+id/createUserPasswordStr"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/white"
                    android:shadowColor="@color/menuefont_shadow"
                    android:shadowRadius="20"
                    android:shadowDx="10"
                    android:shadowDy="-10"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/txtBoxPwd"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:id="@+id/createUserMailStr"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:textColor="@color/white"
                    android:shadowColor="@color/menuefont_shadow"
                    android:shadowRadius="20"
                    android:shadowDx="10"
                    android:shadowDy="-10"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtBoxMail"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/btnCreateUser"
                android:text="@string/createBtnStr"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>

